demo-bank-microservices/src/main/scripts/credit-card-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: credit-card-service
spec:
  selector:
    matchLabels:
      app: credit-card-service
  replicas: 1
  template:
    metadata:
      labels:
        app: credit-card-service
    spec:
      containers:
        - name: credit-card-service
          image: credit-card-service:1.0
          ports:
            - containerPort: 8082
          env:   # Setting Enviornmental Variables
            - name: DB_HOST   # Setting Database host address from configMap
              valueFrom :
                configMapKeyRef :
                  name : db-config
                  key :  host

            - name: DB_NAME  # Setting Database name from configMap
              valueFrom :
                configMapKeyRef :
                  name : db-config
                  key :  dbName

            - name: DB_USERNAME  # Setting Database username from Secret
              valueFrom :
                secretKeyRef :
                  name : mysql-secrets
                  key :  username

            - name: DB_PASSWORD # Setting Database password from Secret
              valueFrom :
                secretKeyRef :
                  name : mysql-secrets
                  key :  password
