demo-bank-microservices/src/main/scripts/ingress-deployment.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: micro.all
  - http:
      paths:
        - path: /api/creditCard
          backend:
            serviceName: credit-card-service
            servicePort: 8082
        - path: /api/customer
          backend:
            serviceName: customer-service
            servicePort: 8080
